User  hd.brummy
Date: Thu Jan 30 10:40:49 CET 2014

    Update gentoo ebuild.

User johns
Date: Thu Jan 30 10:36:53 CET 2014

    Fix spelling in arguments help.
    Add Workaround for alsa blocking audio device.
    Improves thread handling for audio flush and close.

User mini73
Date: Fri Jan 24 11:30:49 CET 2014

    Fix bug: learing x11 remote keys fails.
    Add support for umlauts in input fields.

User johns
Date: Tue Jan 14 14:59:44 CET 2014

    Fix alternative OSD support with VDPAU bitmap surfaces.
    Fix compile error with VDR 2.1.3.
    Fix bug: memory leak.
    PIP close clears the last used PIP channel.
    Fix bug: -DOSD_DEBUG uses old (deleted) variable.
    Fix bug: Option softhddevice.BlackPicture has no effect.

User Dr. Seltsam
Date: Tue Nov  5 16:46:34 CET 2013

    Add support to configure and clear buffers on channel switch.

User johns
Date: Tue Oct  8 10:18:04 CET 2013

    CLOCK_REALTIME -> CLOCK_MONOTONIC to allow time changes.
    Add function VideoStreamOpen and always use VideoStreamClose.
    Softer audio/video sync.
    Add function GetStats to the video output module.
    Add function ResetStart to the video output module.
    Add function SetClosing to the video output module.
    Generalize GetVaapiContext to GetHwAccelContext.
    Add compile time configurable trickspeed packets dump.
    Fix bug #1410: wrong spelled AC-3 and E-AC-3.
    Add compile time selectable h264 trickspeed workaround.
    Use ffmpeg new names AVCodecID, AV_CODEC_... .
    Fix bug: video lagging behind after recording stop.
    Reduce PES error messages.
    Fix bug #1392: Wrong value for mixing LFE.
    Fix bug: wrong grab size, introduced with AMD VDPAU.
    Use VDR SPU decoder as default.
    Fix bug: grab image negative quality isn't the default 100.
    Support AMD VDPAU with surface size != requested size.
    Add cache for auto-crop buffer.
    Fix opengl and opengl threads bugs.
    Initial opengl support with va-api only.