@@ -1,3 +1,8 @@
+User johns
+Date:
+
+    Remove build files for old unstable VDR.
+
 User  hd.brummy
 Date: Thu Jan 30 10:40:49 CET 2014
 
